--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,15 +16,22 @@ repositories {
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.igor.restaurantmobile"
         minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 32
-        versionName "3.2.3108"
+        targetSdkVersion 28
+        versionCode 33
+        versionName "3.3.2612"
+        generatedDensities = []
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "RestaurantMobile-$versionName")
+
+    }
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
     }
     buildTypes {
         release {
@@ -32,30 +39,38 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
-
+    lintOptions {
+        checkReleaseBuilds false
     }
-
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:gridlayout-v7:27.1.1'
-    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.android.support:gridlayout-v7:28.0.0'
 
-    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.google.guava:guava:16+'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
+        transitive = true;
+    }
+    implementation 'org.jetbrains:annotations-java5:15.0'
+
+    implementation 'com.android.support:multidex:1.0.2'
 }
