--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
-
+    <!--        android:name="android.support.multidex.MultiDexApplication"-->
     <application
         android:name=".GlobalVarialbles"
         android:icon="@drawable/icon_waiter"
@@ -22,6 +22,7 @@
         android:roundIcon="@drawable/icon_waiter"
         android:supportsRtl="true"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -97,8 +98,8 @@
         </activity>
         <activity
             android:name=".StartedActivity"
-            android:configChanges="orientation"
             android:label="@string/app_name"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
