fix the split order and show the preview new order

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,11 +35,11 @@ app_version_name_dev=1.0.1
 license_api_url_dev="https://dev.edi.md/ISLicenseService/"
 
 #----------------LIVE-----------------
-app_name_live=Mobile waiter
+app_name_live=Mobile Waiter
 package_name_live=md.edi.mobilewaiter
-app_version_code_live=1
-app_version_name_live=1.0.0
-license_api_url_live="https://edi.md/ISLicenseService/"
+app_version_code_live=2
+app_version_name_live=1.0.1
+license_api_url_live="https://api.edi.md/ISLicenseService/"
 
 #----------------STAGE-----------------
 app_name_stage=Mobile Stage
