--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application
         android:name="md.edi.mobilewaiter.controllers.App"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/icon_waiter"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
