intre poziții mai mult spațiu -„alege masă clientului"-Preview contului Se dublează conturile (add cancelable false- la popup)

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
 
 #----------------DEV-----------------
 app_name_dev=Waiter Dev
@@ -37,8 +39,8 @@ license_api_url_dev="https://dev.edi.md/ISLicenseService/"
 #----------------LIVE-----------------
 app_name_live=Mobile Waiter
 package_name_live=md.edi.mobilewaiter
-app_version_code_live=5
-app_version_name_live=1.0.4
+app_version_code_live=6
+app_version_name_live=1.0.5
 license_api_url_live="https://api.edi.md/ISLicenseService/"
 
 #----------------STAGE-----------------
